...
                                    <constraint firstAttribute="height" constant="2" id="l2v-gi-uyK"/>
                                </constraints>
                            </progressView>
                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="X8e-Qw-qKj">
                                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                                <items>
                                    <navigationItem title="Study" id="Cl4-cx-dDT">
                                        <barButtonItem key="rightBarButtonItem" title="back" id="Po3-8w-4Mw">
                                            <connections>
                                                <segue destination="bzl-GG-rU7" kind="show" id="UZD-Wl-92y"/>
                                            </connections>
                                        </barButtonItem>
                                    </navigationItem>
                                </items>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PaA-6t-Mzk">
                                <rect key="frame" x="0.0" y="428" width="320" height="44"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="rI9-aQ-zaL"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                <state key="normal" title="Start Study"/>
                                <connections>
                                    <action selector="startButtonOnClick:" destination="uyv-uQ-OIO" eventType="touchUpInside" id="01B-hf-kZT"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <navigationBar key="tableHeaderView" contentMode="scaleToFill" id="GBg-C4-98z">
                            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                            <items>
                                <navigationItem title="Entrys" id="nWK-VP-paz">
                                    <barButtonItem key="leftBarButtonItem" title="Graph" id="YOf-Qt-feN">
                                        <connections>
                                            <segue destination="oLS-De-Q2j" kind="show" id="g6D-Zr-JBK"/>
                                        </connections>
                                    </barButtonItem>
                                    <barButtonItem key="rightBarButtonItem" title="+" id="3Us-UI-HJF">
                                        <connections>
...
                        <subviews>
                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2fu-N6-ewp">
                                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                <items>
                                    <navigationItem title="Graph" id="pvi-4v-pm8">
                                        <barButtonItem key="leftBarButtonItem" title="Back" id="TtJ-Dw-Egl">
                                            <connections>
                                                <segue destination="bzl-GG-rU7" kind="show" id="LKl-78-Yi5"/>
                                            </connections>
                                        </barButtonItem>
                                    </navigationItem>
                                </items>
...
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="reZ-4x-MDC">
                                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                                <items>
                                    <navigationItem title="Detail" id="Yo4-Xx-fKF">
                                        <barButtonItem key="leftBarButtonItem" title="back" id="wvQ-gY-0Ta">
                                            <connections>
                                                <segue destination="bzl-GG-rU7" kind="show" id="9Qb-A0-Khv"/>
                                            </connections>
                                        </barButtonItem>
                                    </navigationItem>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vfa-Bo-AYR">
                                <rect key="frame" x="0.0" y="480" width="320" height="35"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="35" id="aB9-aQ-D8M"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="27"/>
                                <state key="normal" title="Delete Study"/>
                                <connections>
                                    <action selector="deleteStudyOnClick:" destination="nkB-it-32a" eventType="touchUpInside" id="6Up-iE-E7c"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="timeLabel" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vud-Ci-mow">
                                <rect key="frame" x="0.0" y="141" width="320" height="20"/>
...
